# prediction

./: .gitignore  pyproject.toml
src/: app.py  configs.py  database.py
src/interfaces/api/: __init__.py  schemas.py
src/interfaces/api/middlewares/: authorization.py
src/interfaces/api/routers/: account.py  offer.py
src/interfaces/cli/: cli.py
